package nl.han.soex.prototype.payment.domain;

public enum PaymentMethod {
    PAYPAL,
    STRIPE,
}
